ref #6981 upgrade cdmlib-service java8->java11